# j-pet-framework-examples

./: CMakeLists.txt
ImageReconstruction/: CMakeLists.txt  PARAMETERS.md  ReconstructionTask.cpp  ReconstructionTask.h  SinogramCreator.cpp  SinogramCreator.h  SinogramCreatorMC.cpp  SinogramCreatorMC.h  SinogramCreatorTools.cpp  SinogramCreatorTools.h  main.cpp
ImageReconstruction/Reconstruction/: CMakeLists.txt
ImageReconstruction/Reconstruction/JPetRecoImageTools/: JPetRecoImageTools.cpp  JPetRecoImageTools.h
ImageReconstruction/tests/: SinogramCreatorToolsTest.cpp
InterfileReconstruction/: InterfileMLPReconstruction.cpp
LargeBarrelAnalysis/: EventCategorizer.cpp  EventCategorizer.h  EventCategorizerTools.cpp  EventFinder.h  HitFinder.cpp  HitFinder.h  HitFinderTools.cpp  ImageReco.cpp  ImageReco.h  SignalFinder.cpp  SignalFinder.h  SignalFinderTools.cpp  SignalFinderTools.h  SignalTransformer.cpp  SignalTransformer.h  TimeCalibLoader.cpp  TimeCalibLoader.h  TimeWindowCreator.cpp  TimeWindowCreator.h  TimeWindowCreatorTools.cpp  dummyThresholds.txt  main.cpp
LargeBarrelAnalysisExtended/: ImageReco.cpp  ImageReco.h  main.cpp
NewAnalysisTemplate/: main.cpp
TimeCalibration/: TimeCalibration.h  main.cpp
VelocityCalibration/: DeltaTFinder.cpp
modules/large_barrel/: CMakeLists.txt
modules/large_barrel/JPetRecoImageTools/: JPetRecoImageTools.cpp  JPetRecoImageTools.h
